fix todos fix DHCP in proper caps everywhere add vendor and .bundle to .gitignore fix initialisation use server from dhcp.yml fix load_subnets fix find_subnet

--- a/config/dhcp_infoblox.yml
+++ b/config/dhcp_infoblox.yml
@@ -2,7 +2,7 @@
 #
 # Configuration file for 'dhcp_infoblox' dhcp provider
 #
-# Infoblox Server settings:
+# use :server setting in dhcp.yml if you are managing a dhcp server which is not localhost
+# Infoblox settings:
 :infoblox_user: "infoblox"
 :infoblox_pw: "infoblox"
-:infoblox_host: "infoblox.my.domain"
