Fix/amend README plus new features
* optional automatical restart of service after add
* optional wait time after restarting services (useful if you have a grid)
* allow to not load all subnets from infoblox (huge speed increase if you have a lot of networks)
* unused_ip now checks if the from and to ip address fields are set, those are optional in foreman
* deleting host object now actually deletes it

--- a/config/dhcp_infoblox.yml
+++ b/config/dhcp_infoblox.yml
@@ -12,3 +12,7 @@
 :wapi_version: '2.0'
 #Use  pre-definded ranges in networks to find available IP's
 :range: false
+#Load subnets from Infoblox, if false subnets from dhcp.yml are loaded
+#:infoblox_subnets: true
+#:restart_sleep: 15
+#:restart: true
