Fixes #21025 - support for non-default dns and network views.

--- a/config/dhcp_infoblox.yml.example
+++ b/config/dhcp_infoblox.yml.example
@@ -8,10 +8,13 @@
 :username: "infoblox"
 :password: "infoblox"
 #
-# Record type to manage: can be "host" or "fixed_address"
+# Record type to manage: can be "host" or "fixedaddress"
 #
 :record_type: 'host'
 #
 # Use  pre-definded ranges in networks to find available IP's
 #
 :use_ranges: false
+
+#:dns_view: 'non-default'
+#:network_view: 'another-non-default'
