Rubocop: Bundler/DuplicatedGem

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -3,6 +3,10 @@ inherit_from: .rubocop_todo.yml
 AllCops:
   TargetRubyVersion: 2.0
 
+# There's if statement in the Gemfile
+Bundler/DuplicatedGem:
+  Enabled: false
+
 Metrics/LineLength:
   Max: 200
 
