Rubocop: Metrics/AbcSize and parens

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -39,6 +39,9 @@ Style/NumericPredicate:
 Style/FrozenStringLiteralComment:
   Enabled: false
 
+Metrics/AbcSize:
+  Enabled: false
+
 Metrics/ClassLength:
   Exclude:
     - 'test/**/*'
