Rubocop: added a rake task

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -42,6 +42,9 @@ Style/FrozenStringLiteralComment:
 Metrics/AbcSize:
   Enabled: false
 
+Style/SymbolArray:
+  Enabled: false
+
 Metrics/ClassLength:
   Exclude:
     - 'test/**/*'
