Fix the tags check for the release gem action
See https://github.com/theforeman/actions/pull/50

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,8 +2,10 @@
 name: Release
 
 on:
-  create:
-    ref_type: tag
+  push:
+    # Pattern matched against refs/tags
+    tags:
+      - '**'
 
 jobs:
   release:
